--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "pages/api/**/*.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/",
+      "dest": "index.js"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "api/$1.js"
     }
   ],
   "headers": [
