--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
-  "routes": [
-    {
-      "src": "/",
-      "dest": "index.js"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "api/$1.js"
-    }
-  ],
+  },
   "headers": [
     {
       "source": "/api/(.*)",
